methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:15: error: not found: value marque
    marque()
    ^