methods.picture.PictureMono1.scala.code
override def run() {
  def marquer() {
    baisseBrosse()
    leveBrosse()
  }
  def faireV() {
    avance(2)
    marquer()
    avance()
    gauche()
    marquer()
    recule()
    droite()
    avance()
    marque()
    avance(2)
    gauche()
  }
  
}